Linux: Fix QLabel content truncated under high dpi

Fixed truncation of pixmap content under high device pixel ratio of
QLabel.

Pick-to: 5.15
Fixes: QTBUG-86170
Change-Id: I795815e0d8a9e57e0dfcca9cf104e86e45027b18
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>